--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,66 @@ body {
     background-color: #111111;
     color: #777777;
     font-family: 'Courier New', Courier, monospace;
-    text-align: center;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+/* Scrollbar styling for webkit browsers (Chrome, Safari) */
+.container::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+}
+
+.container::-webkit-scrollbar-track {
+    background: #111111; /* Background color of the scrollbar track */
+}
+
+.container::-webkit-scrollbar-thumb {
+    background: #777777; /* Color of the scrollbar thumb */
+    border-radius: 6px; /* Roundness of the scrollbar thumb */
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+    background: #555555; /* Color of the scrollbar thumb on hover */
+}
+
+
+.container {
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    height: 100vh;
+    scrollbar-width: thin; /* Thin scrollbar */
+    scrollbar-color: #777777 #111111; /* Thumb and track color */
+}
+
+section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    scroll-snap-align: start;
+}
+
+.wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    height: 100%;
+    position: relative;
+}
+
+.content {
+    text-align: center;
+}
+
+.content2 {
+    text-align: center;
+}
+
+.bottom-content {
+    position: absolute;
+    bottom: 20px; /* Adjust as needed */
+    color: #999999;
+    font-size: 1.2em;
 }
 
 h1 {
@@ -32,6 +85,34 @@ h1 {
 }
 
 .message {
+    font-size: 1.8em;
+    color: #666666;
+    padding: 0 10%;
+    margin-top: 20px;
+}
+
+.timer2 {
+    font-family: "Playfair Display", serif;
+    font-size: 4em;
+    margin-bottom: 20px;
+    color: #999999;
+    letter-spacing: 5px;
+}
+
+.heart {
+    font-family: "Playfair Display", serif;
+    font-size: 6em;
+    color: #333333;
+    margin-bottom: 20px;
+}
+
+.in {
+    font-family: "Playfair Display", serif;
+}
+
+
+.message2 {
+    font-family: "Playfair Display", serif;
     font-size: 1.8em;
     color: #666666;
     padding: 0 10%;
